# simple-flask-blog

./: .gitignore  README.txt  app.py  pyproject.toml
apps/: __init__.py
apps/error/: handlers.py
apps/post/: forms.py  views.py
apps/user/: forms.py  views.py
migrations/versions/: 3487c42faba5_add_users_table.py  851061b99539_.py  c6006c6206d2_.py
models/: post.py  user.py
models/mixins/: datetime.py
templates/: layout.html.jinja
templates/errors/: 404.html.jinja
templates/helpers/: form_field.html.jinja
templates/posts/: edit.html.jinja  index.html.jinja  new.html.jinja  show.html.jinja
templates/shared/: flash.html.jinja  navbar.html.jinja
templates/users/: login.html.jinja  new.html.jinja
